--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
 
     <link rel="stylesheet" href="general.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style2.css" />
 
     <script
       type="module"
