--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
           </figure>
           <figure class="gallery-item">
             <img
-              src="/gallery-2.jpg"
+              src="gallery-2.jpg"
               alt="Photo of beautifully
             arranged food"
             />
