--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" href="general.css" />
     <link rel="stylesheet" href="style2.css" />
+    <link rel="icon" type="image/x-icon" href="favicon.png">
 
     <script
       type="module"
