--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               alt="Business Insider logo"
             />
             <img
-              src="img/logos/the-new-york-times.png"
+              src="the-new-york-times.png"
               alt="The New York Times logo"
             />
             <img src="forbes.png" alt="Forbes logo" />
