--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
             <div class="role">Lead Chef</div>
           </div>
           <div class="team-member">
-            <img src="images/CTO.jpg" alt="CTO, Omnifood" />
+            <img src="images/cto.jpg" alt="CTO, Omnifood" />
             <div class="name">Michael Lee</div>
             <div class="role">CTO</div>
           </div>
